Opening an empty folder inside Wastebasket shows "Wastebasket is Empty"
Affected version
- Nightly flatpak: Yes
- Other: 3.34.2 release 1.fc31 (Fedora 31)
Steps to reproduce
- Move (delete) an empty folder via Nautilus into the Wastebasket
- Open the Wastebasket in Nautilus
- In the Wastebasket, open the empty folder you just deleted
- Observe that it says "Wastebasket is Empty" while it evidently is not.
Current behavior
Text reads "Wastebasket is Empty"
Expected behavior
Text reads "Folder is Empty"
Edited by Newbyte