files-view: Say "Trash is Empty" only in trash:///

Empty trash widget is displaying for empty folder inside trash
instead of Empty folder widget.

`eel_uri_is_trash` only checks whether the URI starts with "trash:",
that's why it also returns true for empty folders inside trash.

Create `eel_uri_is_trash_root` to distinguish trash root (trash:///)
from empty folder inside trash (trash:///emptyfolder)

Closes https://gitlab.gnome.org/GNOME/nautilus/issues/1367